--- a/toDoAppFrontend/website.css
+++ b/toDoAppFrontend/website.css
@@ -37,7 +37,8 @@ p {
     flex-direction: row;  
     flex-wrap: wrap;
 }
-.container .lists{
+.container .lists .list, .container .items .item{
+    
     display: flex;
     border: rgb(0, 0, 0) 1px solid;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
@@ -46,15 +47,21 @@ p {
    
 }
 
+
 .title-list {
     text-align: center;
     width: 100%;
     height: 50px;    
 }
-.lists {
+.title-items {
+    text-align: center;
+    width: 100%;
+    height: 50px;
+}
+.list, .item {
     cursor: pointer;
     height: 50px;
-    width: 100vw;
+    width: 98vw;
 }
 .container-sidebar{
     position: fixed;
@@ -71,7 +78,7 @@ p {
     top: 0;
     background-color: var(--menu-color);
     left: -250px; /* Initially hidden */
-    width: 140px;
+    width: 130px;
     height: 100vh; /* Sidebar height adjusted */
 
     transition: left 0.7s ease; /* Smooth transition */
