--- a/toDoAppFrontend/website.css
+++ b/toDoAppFrontend/website.css
@@ -29,22 +29,32 @@ p {
     z-index: 1000;
 }
 .container{
-
+    width: 100%;
+    box-sizing: border-box;
     margin-top: 45px;
     margin-left: 0px;
     display: flex;
     align-items: flex-start;    
     flex-direction: row;  
     flex-wrap: wrap;
+
+}
+/* the display flex at first seemed redundant as it only got rid of the bullet points
+   but it will be useful in the future as I might want to add a checkmark next to the items
+   or lists
+*/
+.container .lists, .container .items{
+    flex-grow: 1;
 }
 .container .lists .list, .container .items .item{
-    
+    transition: flex-grow 0.7s ease;
+
     display: flex;
+
     border: rgb(0, 0, 0) 1px solid;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
     margin: 3px; 
     align-items: center;
-   
 }
 
 
@@ -61,7 +71,6 @@ p {
 .list, .item {
     cursor: pointer;
     height: 50px;
-    width: 98vw;
 }
 .container-sidebar{
     position: fixed;
@@ -77,13 +86,12 @@ p {
     position: fixed;
     top: 0;
     background-color: var(--menu-color);
-    left: -250px; /* Initially hidden */
+    left: -130px; /* Initially hidden */
     width: 130px;
     height: 100vh; /* Sidebar height adjusted */
 
     transition: left 0.7s ease; /* Smooth transition */
     z-index: 100;
-    left: -250px;
 }
 
 .sidebar-item{
@@ -177,8 +185,10 @@ background: currentColor;
 
 #lists-page, #items-page {
     position: fixed;
+    width: 100%; /* Adjust for sidebar width%*/
     left: 0;
-    transition: margin-left 0.5s ease;
+    transition: margin-left 0.7s, width 0.7s;
+
 }
 #items-page {
     visibility: hidden;
