finished adding progress bar

--- a/toDoAppFrontend/website.css
+++ b/toDoAppFrontend/website.css
@@ -9,10 +9,13 @@
     line-height: 1.5;
 }
 :root {
-    --menu-color:rgb(255, 238, 206);
+    --menu-color:#fefaff;
+    --menu-color:white;
     --sidebar-width: 130px
 }
 html {
+    background-color: var(--menu-color);
+
     scrollbar-width: none;
 }
 p {
@@ -62,6 +65,40 @@ p {
     opacity: 0.5;
     text-decoration: line-through;
 }
+.inner{
+    background: white;
+    width: 30px;
+    border: 0.5px solid rgb(0, 0, 0);
+
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: inset 3px 3px 5px 1px rgb(0, 0, 0, 0.15), inset -3px -3px 5px 1px rgb(0, 0, 0, 0.15);
+      /* ... existing styles ... */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .inner p{
+    font-size: 10px;
+  }
+.circular-progress {
+    position: relative;
+    border: 0.5px solid rgb(0, 0, 0);
+    padding: 2.5px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background:
+      conic-gradient(#ffffff 100%, rgba(0, 0, 0, 0.0) 0%),
+      radial-gradient(farthest-corner at 54px 4px, #f35 10%, #43e 100%);
+    background-size: 100% 100%, 100% 100%;
+    background-position: center, center;
+    box-sizing: border-box;
+  }
 .item-descriptions-container{
     display: flex;
     flex-direction: row;
@@ -85,12 +122,12 @@ p {
 }
 .container-sidebar{
     position: fixed;
+    
     top: 0;
     left: 0;
     width: 150px;
     display: flex;
     height: 100vh;
-    background-color: var(--menu-color);
 
 }
 .sidebar {
@@ -103,7 +140,15 @@ p {
 
     transition: left 0.7s ease; /* Smooth transition */
     z-index: 100;
+    border-radius: 0px 10px 10px 0px; /* Makes the corners rounded */
+    border: 4px solid transparent; /* Ensure the border exists */
+    background-image: linear-gradient(var(--menu-color), var(--menu-color)),
+    linear-gradient(to right, #f35, #43e);
+    background-origin: border-box;
+    background-clip: padding-box, border-box;
+
 }
+
 
 .sidebar-item{
     cursor: pointer;
@@ -216,7 +261,8 @@ background: currentColor;
     visibility: hidden;
 }
 .button-wrapper{
-    width: 4rem;
+    display: flex;
+    align-items: center;
     justify-content: space-between
 }
 
@@ -237,7 +283,10 @@ background: currentColor;
     margin-right: 0.5rem;
     
 }
-
+.left-button-wrapper{
+    display: flex;
+    align-items: center;
+}
 
 @media (min-width: 481px){
     p{
@@ -249,6 +298,17 @@ background: currentColor;
     .list, .item, .title-list, .title-items{
         height: 65px;
     }
+    .circular-progress {
+        width: 55px;
+        height: 55px;
+    }
+    .inner{
+        width: 30px;
+        height: 30px;
+    }
+    .inner p{
+        font-size: 10px;
+    }
     .left-caret{
         font-size: 2.5rem;
     }
@@ -259,14 +319,13 @@ background: currentColor;
     .right-caret{
         font-size: 2.5rem;
     }
-    .button-wrapper{
-        width: 5rem;
-    }
+    
     :root{
         --sidebar-width: 130px;
     }
 }
 @media (min-width: 769px){
+
     :root {
         --sidebar-width: 160px;
     }
@@ -293,8 +352,16 @@ background: currentColor;
     .left-caret{
         font-size: 3.5rem;
     }
-    .button-wrapper{
-        width: 7rem;
+    .circular-progress {
+        width: 65px;
+        height: 65px;
+    }
+    .inner{
+        width: 35px;
+        height: 35px;
+    }
+    .inner p{
+        font-size: 12px;
     }
     .list, .item, .title-list, .title-items {
         height: 80px;
